--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <main>
     <section id="img-container">
-      <div id="inner-img"></div>
+      <img src="./images/image-header-desktop.jpg" alt="people in a room" class="inner-img">
     </section>
 
     <section id="section2">
@@ -36,7 +36,7 @@
         </div>
 
         <div>
-          <h5>12m+</h5>
+          <h5>12M+</h5>
           <p>queries</p>
         </div>
       </div>
